create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2231,3 +2231,33 @@ body {
 .cid-qOj0ympJSf .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
+.cid-qOjvsYID2x {
+  background-image: url("../../../assets/images/679163-1919x1080.png");
+}
+.cid-qOjvsYID2x .icons-media-container {
+  display: flex;
+  justify-content: center;
+  -webkit-justify-content: center;
+  flex-direction: row;
+  -webkit-flex-direction: row;
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-top: 4rem;
+}
+.cid-qOjvsYID2x .icons-media-container .mbr-iconfont {
+  font-size: 96px;
+  color: #ffffff;
+}
+.cid-qOjvsYID2x .icons-media-container .icon-block {
+  padding-bottom: 1rem;
+}
+.cid-qOjvsYID2x .mbr-text {
+  color: #ffffff;
+}
+.cid-qOjvsYID2x .card {
+  padding-bottom: 1.5rem;
+}
+.cid-qOjvsYID2x .mbr-text,
+.cid-qOjvsYID2x .mbr-section-btn {
+  color: #232323;
+}
