--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2729,6 +2729,26 @@ body {
 .cid-qOXWfAL3aK .popup-btn:hover .mbr-section-btn {
   opacity: 1;
 }
+.cid-qQor2j1l8O {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #f9f9f9;
+}
+.cid-qQor2j1l8O h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-qQor2j1l8O p {
+  color: #767676;
+  text-align: left;
+}
+.cid-qQor2j1l8O .card-box {
+  padding-top: 2rem;
+}
+.cid-qQor2j1l8O .card-wrapper {
+  height: 100%;
+}
 .cid-qOj0ympJSf .navbar {
   padding: .5rem 0;
   background: #333333;
