--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2645,89 +2645,36 @@ body {
 .cid-qOjvsYID2x .mbr-section-btn {
   color: #232323;
 }
-.cid-qOXWfAL3aK {
+.cid-qQoxaUSJQw {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #efefef;
+  background-image: url("../../../assets/images/776854-2000x403.png");
 }
-.cid-qOXWfAL3aK .mbr-section-subtitle {
+.cid-qQoxaUSJQw .mbr-section-subtitle {
   color: #767676;
 }
-.cid-qOXWfAL3aK .mbr-text {
-  color: #767676;
+.cid-qQoxaUSJQw .btn {
+  margin: 0 0 .5rem 0;
 }
-.cid-qOXWfAL3aK .card {
-  display: flex;
-  position: relative;
-  justify-content: center;
+.cid-qQowt1i5ah {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/background2.jpg");
 }
-.cid-qOXWfAL3aK .card-wrapper {
-  height: 100%;
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
-  transition: box-shadow 0.3s;
-}
-.cid-qOXWfAL3aK .card-wrapper .card-img {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  overflow: hidden;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
-.cid-qOXWfAL3aK .card-wrapper .card-img .mbr-overlay {
-  background-color: #efefef;
-  display: none;
-  transition: opacity .3s;
-}
-.cid-qOXWfAL3aK .card-wrapper .card-img .mbr-section-btn {
-  display: flex;
-  position: absolute;
-  transition: opacity .3s;
-  width: 100%;
-  margin: auto;
-  left: 0;
-  justify-content: center;
-  align-items: center;
-}
-.cid-qOXWfAL3aK .card-wrapper .card-img img {
-  width: 100%;
-  height: 100%;
-}
-.cid-qOXWfAL3aK .card-wrapper .card-box {
-  background-color: #ffffff;
-  padding: 0 2rem 2rem 2rem;
-  border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0;
-}
-.cid-qOXWfAL3aK .card-wrapper .card-box h4 {
+.cid-qQowt1i5ah h4 {
   font-weight: 500;
   margin-bottom: 0;
+  text-align: left;
+}
+.cid-qQowt1i5ah p {
+  color: #767676;
+  text-align: left;
+}
+.cid-qQowt1i5ah .card-box {
   padding-top: 2rem;
 }
-.cid-qOXWfAL3aK .card-wrapper .card-box p {
-  margin-bottom: 0;
-  padding-top: 1.5rem;
-}
-.cid-qOXWfAL3aK .card-wrapper:hover {
-  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
-  transition: box-shadow 0.3s;
-}
-.cid-qOXWfAL3aK .popup-btn .mbr-overlay {
-  display: block !important;
-  opacity: 0;
-}
-.cid-qOXWfAL3aK .popup-btn .mbr-section-btn {
+.cid-qQowt1i5ah .card-wrapper {
   height: 100%;
-  display: flex !important;
-  opacity: 0;
-}
-.cid-qOXWfAL3aK .popup-btn:hover .mbr-overlay {
-  opacity: .5;
-}
-.cid-qOXWfAL3aK .popup-btn:hover .mbr-section-btn {
-  opacity: 1;
 }
 .cid-qQor2j1l8O {
   padding-top: 90px;
